# Monitoramento-Reclamacoes

./: .env.example  .gitignore  LICENSE  README.md  install.ps1  pyproject.toml  run.bat  setup-scheduler.ps1
src/reclame_aqui_bot/: __init__.py  __main__.py  config.py  exceptions.py  logging_setup.py  models.py  notifier.py  repository.py  scraper.py  service.py
