[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reclame-aqui-bot"
version = "0.1.0"
description = "Monitora reclamações sem resposta no Reclame Aqui e envia alertas por email."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Daniel Ferraz" },
]
keywords = ["reclame-aqui", "scraping", "monitoring", "playwright", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Office/Business",
]
dependencies = [
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
reclame-aqui-bot = "reclame_aqui_bot.service:run"

[tool.hatch.build.targets.wheel]
packages = ["src/reclame_aqui_bot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
